# recombox_plugin_provider

./: .gitignore  Cargo.toml  README.md
plugins/plugin_provider/: README.md  global.d.ts  package.json  test.ts  vitest.config.js
plugins/plugin_provider/global_types/: get_sources.ts  get_torrents.ts  request.ts
plugins/plugin_template/: README.md  esbuild.config.ts  package.json  test.ts  tsconfig.json
plugins/plugin_template/src/: plugin.ts
plugins/plugin_template/src/global_types/: select_source.ts
plugins_manifest/: anime.json  movies.json  tv.json
src/: get_plugin_list.rs  get_sources.rs  get_torrents.rs  global_types.rs  lib.rs  test.rs
src/get_torrent/: mod.rs
src/linker/: bridge_request.rs  mod.rs  request.rs
src/manage_plugin/: get_plugin_list.rs  install_plugin.rs  mod.rs
src/select_source/: mod.rs
