[package]
name = "recombox_plugin_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.3"
boa_engine = "0.21.0"
chrono = "0.4.44"
futures-util = "0.3.32"
postcard = { version = "1.1.3", features = ["alloc"] }
redb = "3.1.1"
reqwest = {version = "0.13.2", features = ["rustls", "json", "multipart", "blocking", "stream"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.50.0", features = ["full"]}
urlencoding = "2.1.3"


[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1
