[package]
name = "recombox_plugin_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.4"
boa_engine = "0.21.1"
chrono = "0.4.44"
futures-util = "0.3.32"
postcard = { version = "1.1.3", features = ["alloc"] }
redb = "4.0.0"
reqwest = {version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "multipart", "blocking", "stream"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.51.0", features = ["full"]}
urlencoding = "2.1.3"


[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1
